method-interceptor-by-jdk-dynamic-proxy

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,11 @@
   <groupId>com.xke</groupId>
   <artifactId>tiny-spring</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+          <dependency>
+            <groupId>aopalliance</groupId>
+            <artifactId>aopalliance</artifactId>
+            <version>1.0</version>
+        </dependency>
+  </dependencies>
 </project>
